create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1903,6 +1903,61 @@ body {
     padding-right: 5rem;
   }
 }
+.cid-qXwimOJ93q {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qXwimOJ93q .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-qXwimOJ93q .mbr-content-text {
+  color: #767676;
+}
+.cid-qXwimOJ93q .card {
+  word-wrap: break-word;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-qXwimOJ93q .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
+}
+.cid-qXwimOJ93q .cards-container {
+  display: flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  justify-content: center;
+  -webkit-justify-content: center;
+  word-break: break-word;
+}
+.cid-qXwimOJ93q .media-block {
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+  padding-left: 2rem;
+}
+.cid-qXwimOJ93q .cards-block {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-qXwimOJ93q .card-img {
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-align-items: center;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+}
+@media (max-width: 991px) {
+  .cid-qXwimOJ93q .media-block {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+    padding-left: 0;
+    padding-bottom: 2rem;
+  }
+}
 .cid-qXvVbQ1YAh {
   padding-top: 90px;
   padding-bottom: 90px;
