create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2060,6 +2060,138 @@ body {
 .cid-qXvV91uIhi .google-map[data-state="loading"] [data-state-details] {
   display: none;
 }
+.cid-r10uLnVvBd {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #0075c9;
+}
+.cid-r10uLnVvBd .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.cid-r10uLnVvBd .mbr-figure img {
+  height: 100%;
+  margin: 0 auto;
+}
+@media (max-width: 991px) {
+  .cid-r10uLnVvBd .mbr-figure img {
+    width: 100% !important;
+  }
+}
+.cid-r10uLnVvBd .mbr-text,
+.cid-r10uLnVvBd .mbr-section-btn {
+  text-align: center;
+}
+.cid-r10vBDSUpq {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-r10vBDSUpq .counter-container {
+  color: #767676;
+}
+.cid-r10vBDSUpq .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-r10vBDSUpq .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-r10vBDSUpq .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-r10vBDSUpq .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-r10xapctww {
+  background-color: #0075c9;
+}
+.cid-r10xapctww .icons-media-container {
+  display: flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-top: 4rem;
+}
+.cid-r10xapctww .icons-media-container .mbr-iconfont {
+  font-size: 96px;
+  color: #ffffff;
+}
+.cid-r10xapctww .icons-media-container .icon-block {
+  padding-bottom: 1rem;
+}
+.cid-r10xapctww .mbr-text {
+  color: #ffffff;
+}
+.cid-r10xapctww .card {
+  padding-bottom: 1.5rem;
+}
+.cid-r10yomVkd8 {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-r10yomVkd8 .images-container.container-fluid {
+  padding: 0;
+}
+.cid-r10yomVkd8 .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-r10yomVkd8 .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-r10yomVkd8 .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-r10yomVkd8 .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r10yomVkd8 .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r10yomVkd8 .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r10yomVkd8 .img-item {
+    width: 100% !important;
+  }
+  .cid-r10yomVkd8 .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
 .cid-qZp8eM10rp {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -2078,6 +2210,52 @@ body {
 @media (max-width: 991px) {
   .cid-qZp8eM10rp .mbr-figure img {
     width: 100% !important;
+  }
+}
+.cid-r10ykXwAMC {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-r10ykXwAMC .images-container.container-fluid {
+  padding: 0;
+}
+.cid-r10ykXwAMC .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-r10ykXwAMC .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-r10ykXwAMC .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-r10ykXwAMC .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r10ykXwAMC .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r10ykXwAMC .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r10ykXwAMC .img-item {
+    width: 100% !important;
+  }
+  .cid-r10ykXwAMC .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
   }
 }
 .cid-qZp9UTjAh5 {
@@ -2530,4 +2708,213 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+}
+.cid-r10xV0QqyG {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-r10xV0QqyG .images-container.container-fluid {
+  padding: 0;
+}
+.cid-r10xV0QqyG .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-r10xV0QqyG .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-r10xV0QqyG .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-r10xV0QqyG .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r10xV0QqyG .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r10xV0QqyG .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r10xV0QqyG .img-item {
+    width: 100% !important;
+  }
+  .cid-r10xV0QqyG .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-r10zAz6ZMr {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-r10zAz6ZMr .mbr-text {
+  color: #767676;
+}
+.cid-r10zAz6ZMr h4 {
+  text-align: center;
+}
+.cid-r10zAz6ZMr p {
+  text-align: center;
+}
+.cid-r10zAz6ZMr .card-img span {
+  font-size: 96px;
+  color: #149dcc;
+}
+.cid-r10yt1M5OJ {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-r10yt1M5OJ h2 {
+  text-align: center;
+}
+.cid-r10yt1M5OJ h3 {
+  text-align: center;
+  font-weight: 300;
+}
+.cid-r10yt1M5OJ p {
+  color: #767676;
+}
+.cid-r10yt1M5OJ .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-r10yt1M5OJ .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-r10yt1M5OJ .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+.cid-r10yt1M5OJ .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r10yt1M5OJ .card-title {
+  font-weight: 500;
+}
+.cid-r10yt1M5OJ .card-img {
+  text-align: inherit;
+}
+.cid-r10yt1M5OJ .card-img span {
+  font-size: 48px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-r10yt1M5OJ .mbr-figure {
+    padding-right: 2rem;
+    padding-left: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-r10yt1M5OJ .mbr-figure {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-r10yt1M5OJ .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+  }
+  .cid-r10yt1M5OJ .block-content {
+    flex-direction: row;
+    -webkit-flex-direction: row;
+    text-align: center;
+  }
+  .cid-r10yt1M5OJ .block-content .card {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+  }
+}
+#instagram-feed-block-u .inst__title {
+  color: #0075c9;
+}
+.cid-r10zzimBoK {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-r10zzimBoK .content {
+    text-align: center;
+  }
+  .cid-r10zzimBoK .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-r10zzimBoK .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-r10zzimBoK .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-r10zzimBoK .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-r10zzimBoK .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-r10zzimBoK .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-r10zzimBoK .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-r10zzimBoK .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-r10zzimBoK .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-r10zzimBoK .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-r10zzimBoK .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-r10zzimBoK .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-r10zzimBoK P {
+  color: #0075c9;
 }
