create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1372,32 +1372,96 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-qXvRGBkKZt {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-r7lcGXYNcy {
+  background-image: url("../../../assets/images/unset-1400x933.jpg");
+}
+.cid-r7lcGXYNcy h1 {
+  color: #616161;
+}
+.cid-r7lcGXYNcy h2,
+.cid-r7lcGXYNcy h3,
+.cid-r7lcGXYNcy p {
+  color: #767676;
+}
+.cid-r7lcGXYNcy .mbr-section-subtitle {
+  font-style: italic;
+}
+.cid-r7lcGXYNcy H1 {
+  color: #ffffff;
+  text-align: left;
+}
+.cid-r7lcGXYNcy H3 {
+  color: #0075c9;
+}
+.cid-r7lcGXYNcy SPAN {
+  color: #ffffff;
+}
+.cid-r7lcGXYNcy P {
+  color: #ffffff;
+}
+.cid-r7lcFdhNMZ {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-qXvRGBkKZt .mbr-figure {
+.cid-r7lcFdhNMZ .mbr-text,
+.cid-r7lcFdhNMZ blockquote {
+  color: #767676;
+}
+.cid-r7lcFdhNMZ .mbr-text B {
+  color: #232323;
+}
+.cid-r7lcFdhNMZ .mbr-text DIV {
+  color: #0075c9;
+}
+.cid-r7lcFdhNMZ .mbr-text {
+  color: #0075c9;
+}
+.cid-r7lfqrAhBv {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-r7lfqrAhBv .images-container.container-fluid {
+  padding: 0;
+}
+.cid-r7lfqrAhBv .media-container-row {
   margin: 0 auto;
-  width: 100%;
+  align-items: stretch;
+}
+.cid-r7lfqrAhBv .media-container-row .img-item {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
 }
-.cid-qXvRGBkKZt .mbr-figure img {
-  height: 100%;
-  margin: 0 auto;
+.cid-r7lfqrAhBv .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
 }
-@media (max-width: 991px) {
-  .cid-qXvRGBkKZt .mbr-figure img {
+.cid-r7lfqrAhBv .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r7lfqrAhBv .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r7lfqrAhBv .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r7lfqrAhBv .img-item {
     width: 100% !important;
   }
-}
-.cid-qXvRGBkKZt H1 {
-  color: #0075c9;
-}
-.cid-qXvRGBkKZt .mbr-text,
-.cid-qXvRGBkKZt .mbr-section-btn {
-  color: #0075c9;
+  .cid-r7lfqrAhBv .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
 }
 .cid-qXvRorgAIh {
   background-color: #0075c9;
@@ -1432,54 +1496,110 @@ body {
 .cid-qXvRorgAIh .mbr-section-btn {
   color: #efefef;
 }
-.cid-qXvRpgFFsR {
-  padding-top: 75px;
-  padding-bottom: 30px;
-  background-color: #efefef;
+.cid-r7ldKKNaOV {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
 }
-.cid-qXvRpgFFsR h4 {
-  font-weight: 500;
+.cid-r7ldKKNaOV .mbr-text,
+.cid-r7ldKKNaOV blockquote {
+  color: #767676;
+}
+.cid-r7ldKKNaOV .mbr-text B {
+  color: #232323;
+}
+.cid-r7ldKKNaOV .mbr-text DIV {
   color: #ffffff;
 }
-.cid-qXvRpgFFsR p {
+.cid-r7ldKKNaOV .mbr-text {
   color: #ffffff;
 }
-.cid-qXvRpgFFsR .card {
-  margin-bottom: 2rem;
+.cid-r7ldKKNaOV .mbr-text P {
+  text-align: center;
+  color: #0075c9;
 }
-.cid-qXvRpgFFsR .card-img {
-  border-radius: 0;
-  padding: 2rem 2rem 0 2rem;
-  background-color: #0075c9;
+.cid-r61lB71937 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
 }
-.cid-qXvRpgFFsR .card-img span {
-  font-size: 100px;
+@media (min-width: 992px) {
+  .cid-r61lB71937 .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-r61lB71937 .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-r61lB71937 .mbr-text {
+    text-align: center;
+  }
+}
+.cid-r61lB71937 .mbr-text,
+.cid-r61lB71937 .mbr-section-btn {
+  color: #0075c9;
+}
+.cid-r61lB71937 H1 {
+  color: #0075c9;
+}
+.cid-r61mrdQxPQ {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #0075c9, #0075c9);
+}
+@media (min-width: 992px) {
+  .cid-r61mrdQxPQ .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-r61mrdQxPQ .mbr-figure {
+    padding-top: 3rem;
+  }
+}
+.cid-r61mrdQxPQ .mbr-section-title {
   color: #ffffff;
 }
-.cid-qXvRpgFFsR .card-box {
-  padding-bottom: 2rem;
-  background-color: #0075c9;
-  background: linear-gradient(#0075c9, transparent);
+.cid-r61mrdQxPQ .mbr-text,
+.cid-r61mrdQxPQ .mbr-section-btn {
+  color: #ffffff;
 }
-.cid-qXvRpgFFsR .card-box .card-title {
-  margin: 0;
-  padding: 2rem 2rem 0 2rem;
+.cid-r7le4Q7XnM {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
 }
-.cid-qXvRpgFFsR .card-box .mbr-text {
-  margin-bottom: 0;
-  padding: 2rem 2rem 0 2rem;
+@media (min-width: 992px) {
+  .cid-r7le4Q7XnM .mbr-figure {
+    padding-right: 4rem;
+  }
 }
-.cid-qXvRpgFFsR .card-box .mbr-section-btn {
-  padding-top: 1rem;
+@media (max-width: 991px) {
+  .cid-r7le4Q7XnM .mbr-figure {
+    padding-bottom: 3rem;
+  }
 }
-.cid-qXvRpgFFsR .card-box .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
+@media (max-width: 767px) {
+  .cid-r7le4Q7XnM .mbr-text {
+    text-align: center;
+  }
+}
+.cid-r7le4Q7XnM .mbr-text,
+.cid-r7le4Q7XnM .mbr-section-btn {
+  color: #0075c9;
+}
+.cid-r7le4Q7XnM H1 {
+  color: #0075c9;
 }
 .cid-qXvUpVVThh {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #0075c9, #ffffff);
+  background: linear-gradient(45deg, #0075c9, #0075c9);
 }
 @media (min-width: 992px) {
   .cid-qXvUpVVThh .mbr-figure {
@@ -1660,7 +1780,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #0075c9;
 }
 .cid-qXvJPSuyGS button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1724,10 +1844,6 @@ body {
 .cid-qXvJPSuyGS .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
 .cid-qXvJPSuyGS .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
-}
-.cid-qXvJPSuyGS .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-qXvJPSuyGS .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
 }
 .cid-qXvJPSuyGS .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qXvJPSuyGS .collapsed .navbar-collapse.show .navbar-buttons {
@@ -1823,10 +1939,6 @@ body {
   .cid-qXvJPSuyGS .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
-  .cid-qXvJPSuyGS .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-qXvJPSuyGS .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
-  }
   .cid-qXvJPSuyGS .navbar-collapse.collapsing .navbar-buttons,
   .cid-qXvJPSuyGS .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -1885,7 +1997,7 @@ body {
 }
 .cid-qXvJPSuyGS .nav-link:hover,
 .cid-qXvJPSuyGS .dropdown-item:hover {
-  color: #767676 !important;
+  color: #0075c9 !important;
 }
 .cid-qXvVuo777a {
   background-image: url("../../../assets/images/untitled-drawing-4-960x720.jpg");
@@ -1961,10 +2073,238 @@ body {
 .cid-qXwimOJ93q .count {
   text-align: left;
 }
+.cid-r7lfbQyYMH {
+  background: #ffffff;
+}
+.cid-r7lfbQyYMH .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-r7lfbQyYMH .mbr-figure {
+  margin: 0 auto;
+}
+.cid-r7lfbQyYMH figcaption {
+  position: relative;
+}
+.cid-r7lfbQyYMH figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-r7lfbQyYMH .image-block {
+    width: 100% !important;
+  }
+}
+.cid-r7leN20JO3 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+  background: linear-gradient(#ffffff, #ffffff);
+}
+.cid-r7leN20JO3 .carousel-control {
+  background: #000;
+}
+.cid-r7leN20JO3 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r7leN20JO3 .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-r7leN20JO3 .carousel-item .media-container-row {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-r7leN20JO3 .carousel-item .wrap-img {
+  text-align: center;
+}
+.cid-r7leN20JO3 .carousel-item .wrap-img img {
+  max-height: 150px;
+  width: auto;
+  max-width: 100%;
+}
+.cid-r7leN20JO3 .carousel-controls {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-r7leN20JO3 .carousel-controls .carousel-control {
+  background: #000;
+  border-radius: 50%;
+  position: static;
+  width: 40px;
+  height: 40px;
+  margin-top: 2rem;
+  border-width: 1px;
+}
+.cid-r7leN20JO3 .carousel-controls .carousel-control.carousel-control-prev {
+  left: auto;
+  margin-right: 20px;
+  margin-left: 0;
+}
+.cid-r7leN20JO3 .carousel-controls .carousel-control.carousel-control-next {
+  right: auto;
+  margin-right: 0;
+}
+.cid-r7leN20JO3 .carousel-controls .carousel-control .mbr-iconfont {
+  font-size: 1rem;
+}
+.cid-r7leN20JO3 .cloneditem-1,
+.cid-r7leN20JO3 .cloneditem-2,
+.cid-r7leN20JO3 .cloneditem-3,
+.cid-r7leN20JO3 .cloneditem-4,
+.cid-r7leN20JO3 .cloneditem-5 {
+  display: none;
+}
+.cid-r7leN20JO3 .col-lg-15 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  -webkit-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-r7leN20JO3 .col-lg-15 {
+    -ms-flex: 0 0 20%;
+    -webkit-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+    width: 20%;
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
+  .cid-r7leN20JO3 .carousel-inner.slides2 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(50%, 0, 0);
+    transform: translate3d(50%, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
+  .cid-r7leN20JO3 .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides2 > .carousel-item.carousel-item-left,
+  .cid-r7leN20JO3 .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-r7leN20JO3 .carousel-inner.slides2 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides2 .cloneditem-1,
+  .cid-r7leN20JO3 .carousel-inner.slides2 .cloneditem-2,
+  .cid-r7leN20JO3 .carousel-inner.slides2 .cloneditem-3 {
+    display: block;
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
+  .cid-r7leN20JO3 .carousel-inner.slides3 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(33.333333%, 0, 0);
+    transform: translate3d(33.333333%, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
+  .cid-r7leN20JO3 .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-33.333333%, 0, 0);
+    transform: translate3d(-33.333333%, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides3 > .carousel-item.carousel-item-left,
+  .cid-r7leN20JO3 .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-r7leN20JO3 .carousel-inner.slides3 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides3 .cloneditem-1,
+  .cid-r7leN20JO3 .carousel-inner.slides3 .cloneditem-2,
+  .cid-r7leN20JO3 .carousel-inner.slides3 .cloneditem-3 {
+    display: block;
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
+  .cid-r7leN20JO3 .carousel-inner.slides4 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(25%, 0, 0);
+    transform: translate3d(25%, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
+  .cid-r7leN20JO3 .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-25%, 0, 0);
+    transform: translate3d(-25%, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides4 > .carousel-item.carousel-item-left,
+  .cid-r7leN20JO3 .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-r7leN20JO3 .carousel-inner.slides4 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides4 .cloneditem-1,
+  .cid-r7leN20JO3 .carousel-inner.slides4 .cloneditem-2,
+  .cid-r7leN20JO3 .carousel-inner.slides4 .cloneditem-3 {
+    display: block;
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
+  .cid-r7leN20JO3 .carousel-inner.slides5 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
+  .cid-r7leN20JO3 .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides5 > .carousel-item.carousel-item-left,
+  .cid-r7leN20JO3 .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-r7leN20JO3 .carousel-inner.slides5 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides5 .cloneditem-1,
+  .cid-r7leN20JO3 .carousel-inner.slides5 .cloneditem-2,
+  .cid-r7leN20JO3 .carousel-inner.slides5 .cloneditem-3,
+  .cid-r7leN20JO3 .carousel-inner.slides5 .cloneditem-4 {
+    display: block;
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
+  .cid-r7leN20JO3 .carousel-inner.slides6 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(16.666667%, 0, 0);
+    transform: translate3d(16.666667%, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
+  .cid-r7leN20JO3 .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-16.666667%, 0, 0);
+    transform: translate3d(-16.666667%, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides6 > .carousel-item.carousel-item-left,
+  .cid-r7leN20JO3 .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-r7leN20JO3 .carousel-inner.slides6 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-r7leN20JO3 .carousel-inner.slides6 .cloneditem-1,
+  .cid-r7leN20JO3 .carousel-inner.slides6 .cloneditem-2,
+  .cid-r7leN20JO3 .carousel-inner.slides6 .cloneditem-3,
+  .cid-r7leN20JO3 .carousel-inner.slides6 .cloneditem-4,
+  .cid-r7leN20JO3 .carousel-inner.slides6 .cloneditem-5 {
+    display: block;
+  }
+}
 .cid-qXvVbQ1YAh {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: linear-gradient(0deg, #ffffff, #0075c9);
+  background: linear-gradient(0deg, #0075c9, #0075c9);
 }
 .cid-qXvVbQ1YAh .mbr-iconfont-social {
   font-size: 32px;
@@ -1976,34 +2316,43 @@ body {
 .cid-qXvVbQ1YAh H2 {
   color: #ffffff;
 }
-.cid-qXvV91uIhi {
+.cid-r7leOVBezR {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #0075c9;
+  background-color: #ffffff;
 }
 @media (max-width: 767px) {
-  .cid-qXvV91uIhi .content {
+  .cid-r7leOVBezR .content {
     text-align: center;
   }
-  .cid-qXvV91uIhi .content > div:not(:last-child) {
+  .cid-r7leOVBezR .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-.cid-qXvV91uIhi .map {
-  height: 18.75rem;
+@media (max-width: 767px) {
+  .cid-r7leOVBezR .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-r7leOVBezR .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-r7leOVBezR .media-wrap img {
+  height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-qXvV91uIhi .footer-lower .copyright {
+  .cid-r7leOVBezR .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-qXvV91uIhi .footer-lower hr {
+.cid-r7leOVBezR .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-qXvV91uIhi .footer-lower .social-list {
+.cid-r7leOVBezR .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2012,53 +2361,30 @@ body {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-qXvV91uIhi .footer-lower .social-list .mbr-iconfont-social {
+.cid-r7leOVBezR .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-qXvV91uIhi .footer-lower .social-list .soc-item {
+.cid-r7leOVBezR .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-qXvV91uIhi .footer-lower .social-list a {
+.cid-r7leOVBezR .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-qXvV91uIhi .footer-lower .social-list a:hover {
+.cid-r7leOVBezR .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-qXvV91uIhi .footer-lower .social-list {
+  .cid-r7leOVBezR .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
 }
-.cid-qXvV91uIhi .google-map {
-  height: 25rem;
-  position: relative;
-}
-.cid-qXvV91uIhi .google-map iframe {
-  height: 100%;
-  width: 100%;
-}
-.cid-qXvV91uIhi .google-map [data-state-details] {
-  color: #6b6763;
-  font-family: Montserrat;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-.cid-qXvV91uIhi .google-map[data-state] {
-  background: #e9e5dc;
-}
-.cid-qXvV91uIhi .google-map[data-state="loading"] [data-state-details] {
-  display: none;
+.cid-r7leOVBezR P {
+  color: #0075c9;
 }
 .cid-r10uLnVvBd {
   padding-top: 90px;
@@ -2511,10 +2837,6 @@ body {
 .cid-qXvJPSuyGS .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-qXvJPSuyGS .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-qXvJPSuyGS .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-qXvJPSuyGS .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qXvJPSuyGS .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2609,10 +2931,6 @@ body {
   .cid-qXvJPSuyGS .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
-  .cid-qXvJPSuyGS .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-qXvJPSuyGS .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
-  }
   .cid-qXvJPSuyGS .navbar-collapse.collapsing .navbar-buttons,
   .cid-qXvJPSuyGS .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -2671,7 +2989,7 @@ body {
 }
 .cid-qXvJPSuyGS .nav-link:hover,
 .cid-qXvJPSuyGS .dropdown-item:hover {
-  color: #767676 !important;
+  color: #0075c9 !important;
 }
 .cid-qZp7ZYeOnw {
   padding-top: 60px;
